--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>OriginalMovieApp</title>
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
-
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <meta charset="utf-8">
+    <title><%= full_title(yield(:title)) %></title>
+    <%= render 'layouts/rails_default' %>
+    <%= render 'layouts/shim' %>
   </head>
-
   <body>
+    <header class="page-header">
+      <h1>welcome to movie app</h1>
+      <nav>
+        <ul class="main-nav">
+          <li>elementary</li>
+          <li>junior high</li>
+          <li>high school</li>
+        </ul>
+      </nav>
     <%= yield %>
+    <%= render 'layouts/footer' %>
   </body>
 </html>
