--- a/app/views/top_pages/home.html.erb
+++ b/app/views/top_pages/home.html.erb
@@ -1,1 +1,6 @@
+<div class="home-content wrapper">
+  <h2 class="page-title">「明日この映画見せよう！」</h2>
+  <p>「学生の時に見たかったな・・」「この映画見て欲しい！」そんな映画を共有するサイト</p>
+</div>
+
 
