--- a/app/views/top_pages/home.html.erb
+++ b/app/views/top_pages/home.html.erb
@@ -2,5 +2,10 @@
   <h2 class="page-title">「明日この映画見せよう！」</h2>
   <p>「学生の時に見たかったな・・」「この映画見て欲しい！」そんな映画を共有するサイト</p>
 </div>
-
-
+<div id="home" class="big-bg">
+</div>
+<div class="wrapper grid">
+  <div class="item">Elementary</div>
+  <div class="item">Junior high</div>
+  <div class="item">High school</div>
+</div>
