--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,9 +2,9 @@
   <h1>movies for students</h1>
     <nav>
       <ul class="main-nav">
-        <li>elementary</li>
-        <li>junior high</li>
-        <li>high school</li>
+        <li><%= link_to "小学校", '#' %></li>
+        <li><%= link_to "中学校", '#' %></li>
+        <li><%= link_to "高校", '#' %></li>
       </ul>
     </nav>
 </header>
