--- a/app/views/top_pages/home.html.erb
+++ b/app/views/top_pages/home.html.erb
@@ -5,7 +5,7 @@
 <div id="home" class="big-bg">
 </div>
 <div class="wrapper grid">
-  <div class="item">Elementary</div>
-  <div class="item">Junior high</div>
-  <div class="item">High school</div>
+  <div class="item"><%= link_to "Elementary", '#' %></div>
+  <div class="item"><%= link_to "Junior high", '#' %></div>
+  <div class="item"><%= link_to "High school", '#' %></div>
 </div>
