--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -65,14 +65,39 @@
   background: #0bd;
   color: #fff;
   text-align: center;
-  padding-top: 25%;
 }
 
 .grid {
   display: grid;
   gap: 26px;
-  grid-template-columns: 1fr 1fr 1fr;
-  margin-top: 4%;
+  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+  margin-top: 6%;
   margin-bottom: 50px;
-  grid-template-rows: 200px;
+  
+}
+
+/* モバイル版 */
+
+@media (max-width: 600px) {
+  .page-title {
+      font-size: 2.5rem;
+  }
+
+  /* header */
+  .main-nav {
+    font-size: 1rem;
+    margin-top: 10px;
+  }
+  .main-nav li {
+    margin: 0 20px;
+  }
+  .page-header {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  /* home */
+  .home-content {
+    margin-top: 20%;
+  }
 }
