--- a/app/views/top_pages/home.html.erb
+++ b/app/views/top_pages/home.html.erb
@@ -2,9 +2,10 @@
   <h2 class="page-title">「明日この映画見せよう！」</h2>
   <p>「学生の時に見たかったな・・」「この映画見て欲しい！」そんな映画を共有するサイト</p>
 </div>
-<div id="home" class="big-bg">
-</div>
-<div class="wrapper grid">
+ <div id="home" class="big-bg">
+  <%= image_tag 'top-page.jpg' %>
+ </div>
+<div class="grid">
   <div class="item"><%= link_to "Elementary", '#' %></div>
   <div class="item"><%= link_to "Junior high", '#' %></div>
   <div class="item"><%= link_to "High school", '#' %></div>
