--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,8 @@
 <header class="page-header wrapper">
-  <h1>movies for students</h1>
+  <%= link_to "Movies for Students", root_url %>
     <nav>
       <ul class="main-nav">
+        <%= link_to "Sign Up", signup_path %>
         <li><%= link_to "小学校", '#' %></li>
         <li><%= link_to "中学校", '#' %></li>
         <li><%= link_to "高校", '#' %></li>
