--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,13 +8,14 @@
     <%= render 'layouts/shim' %>
     <%= favicon_link_tag('logo.png') %>
   </head>
-  <body>
+  <body>  
+    <%= render 'layouts/header' %>
     <div>
-      <%= render 'layouts/header' %>
-    </div>
-    <div>
+      <% flash.each do |message_type, message| %>
+        <div class="alert alert-<%= message_type %>"><%= message %></div>
+      <% end %>
       <%= yield %>
+      <%= render 'layouts/footer' %>
     </div>
-    <%= render 'layouts/footer' %>
   </body>
 </html>
