--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,7 @@
 <h1>Sign up</h1>
 <div>
   <%= form_for(@user, url: signup_path) do |f| %>
+  <%= render 'shared/error_messages', model: f.object %>
     <%= f.label :name %>
     <%= f.text_field :name %>
 
