--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,13 +1,9 @@
+<% provide(:title, 'All users') %>
 <h1>All users</h1>
 
+
+
 <ul class="users">
-  <% @users.each do |user| %>
-    <li>
-      <%= link_to user.name, user %>
-        <% if current_user.admin? && !current_user?(user) %>
-    |     <%= link_to "delete", user, method: :delete,
-                                  data: { confirm: "You sure?" } %>
-  <% end %>
-    </li>
-  <% end %>
+  <%= render @users %>
 </ul>
+
